feat: добавлено требование безопасности BearerAuth для маршрутов follow/unfollow
