# docs/swagger.json
@@ -719,6 +719,11 @@
         },
         "/relation/follow": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Follow another user",
                 "consumes": [
                     "application/json"
@@ -780,6 +785,11 @@
         },
         "/relation/unfollow": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Unfollow another user",
                 "consumes": [
                     "application/json"
